--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "axios": "^1.1.2",
         "flowbite": "^1.6.5",
         "flowbite-typography": "^1.0.3",
+        "jquery": "^3.7.0",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
