--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "leaflet": "^1.9.4",
         "smooth-scroll": "^16.1.3",
         "swiper": "^9.3.2"
     }
