--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "leaflet": "^1.9.4",
         "smooth-scroll": "^16.1.3",
-        "swiper": "^9.3.2"
+        "swiper": "^9.3.2",
+        "tinymce": "^6.6.1"
     }
 }
